--- a/wp-content/themes/modern-journalist/sass/layout/_navigation.scss
+++ b/wp-content/themes/modern-journalist/sass/layout/_navigation.scss
@@ -3,11 +3,11 @@
 ==============================*/
 
 #site-navigation {
-    padding: 8px;
+   
     display: flex;
     float: left;
     height: 100%;
-    width: 95%;
+    width: calc(100vw - 3rem);
     position: absolute;
     top: 0;
     left: 100%;
@@ -16,6 +16,7 @@
     align-items: center;
     @include transition(left .3s ease-in-out);
     @include breakpoint("medium") {
+     padding: 8px;
         position: absolute;
         display: inline-flex;
         margin-right: 50px;
@@ -48,7 +49,7 @@
     top: 0;
     width: 3rem;
     height: 100%;
-    left: -3rem;
+    left: -2.75rem;
     align-items: center;
     @include breakpoint("medium") {
         display: none;
@@ -89,7 +90,7 @@
 
 #primary-menu {
     list-style: none;
-    padding: 0 1rem 0 1rem;
+    padding: 0 1rem 0 0;
     margin: 0;
     display: flex;
     @include breakpoint("medium") {
@@ -122,7 +123,7 @@
             color: gray;
             font-family: $font__roboto;
             letter-spacing: .5px;
-            font-size: .8rem;
+            font-size: .7rem;
             text-transform: uppercase;
             line-height: 1;
             @include transition(color .3s ease-in-out);
